--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13781,8 +13781,8 @@ section.lazy-placeholder:after {
   width: 100%;
 }
 .cid-srDza7s7OQ {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 60px;
   background-color: #232323;
 }
 .cid-srDza7s7OQ .mbr-section-subtitle {
@@ -14338,8 +14338,8 @@ section.lazy-placeholder:after {
   width: 100%;
 }
 .cid-srDz3fetyD {
-  padding-top: 105px;
-  padding-bottom: 105px;
+  padding-top: 45px;
+  padding-bottom: 75px;
   background-color: #232323;
 }
 .cid-srDz3fetyD .mbr-section-subtitle {
@@ -15399,4 +15399,561 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .nav-link:hover,
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
+}
+.cid-srE0nTB9gk {
+  padding-top: 45px;
+  padding-bottom: 60px;
+  background-color: #232323;
+}
+.cid-srE0nTB9gk .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-srE0nTVUqx {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background-color: #232323;
+}
+.cid-srE0nTVUqx img,
+.cid-srE0nTVUqx .item-img {
+  width: 100%;
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-srE0nTVUqx .item:focus,
+.cid-srE0nTVUqx span:focus {
+  outline: none;
+}
+.cid-srE0nTVUqx .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-srE0nTVUqx .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #232323;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-srE0nTVUqx .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-srE0nTVUqx .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-srE0nTVUqx .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-srE0nTVUqx .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-srE0nTVUqx .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-srE0nTVUqx .mbr-section-title {
+  color: #ffffff;
+}
+.cid-srE0nTVUqx .mbr-text,
+.cid-srE0nTVUqx .mbr-section-btn {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-srE0nTVUqx .item-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-srE0nTVUqx .item-subtitle {
+  text-align: left;
+  color: #bbbbbb;
+}
+.cid-srE0nUvQYh .navbar {
+  padding: .5rem 0;
+  background: #181818;
+  transition: none;
+  min-height: 77px;
+}
+.cid-srE0nUvQYh .navbar-dropdown.bg-color.transparent.opened {
+  background: #181818;
+}
+.cid-srE0nUvQYh a {
+  font-style: normal;
+}
+.cid-srE0nUvQYh .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-srE0nUvQYh .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-srE0nUvQYh .nav-item:focus,
+.cid-srE0nUvQYh .nav-link:focus {
+  outline: none;
+}
+.cid-srE0nUvQYh .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-srE0nUvQYh .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-srE0nUvQYh .menu-logo {
+  margin-right: auto;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-srE0nUvQYh .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-srE0nUvQYh .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-srE0nUvQYh .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-srE0nUvQYh .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-srE0nUvQYh .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-srE0nUvQYh .dropdown .dropdown-menu {
+  background: #181818;
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-srE0nUvQYh .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-srE0nUvQYh .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-srE0nUvQYh .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-srE0nUvQYh .dropdown.open > .dropdown-menu {
+  visibility: visible;
+}
+.cid-srE0nUvQYh .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-srE0nUvQYh .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-srE0nUvQYh .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-srE0nUvQYh .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-srE0nUvQYh .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-srE0nUvQYh .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-srE0nUvQYh .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-srE0nUvQYh button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-srE0nUvQYh button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-srE0nUvQYh button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-srE0nUvQYh button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-srE0nUvQYh button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-srE0nUvQYh button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-srE0nUvQYh button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-srE0nUvQYh nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-srE0nUvQYh nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-srE0nUvQYh nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-srE0nUvQYh nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-srE0nUvQYh .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-srE0nUvQYh .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse.collapsing,
+.cid-srE0nUvQYh .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-srE0nUvQYh .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-srE0nUvQYh .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-srE0nUvQYh .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-srE0nUvQYh .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-srE0nUvQYh .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-srE0nUvQYh .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-srE0nUvQYh .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.3rem);
+  }
+}
+.cid-srE0nUvQYh .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-srE0nUvQYh .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-srE0nUvQYh .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-srE0nUvQYh .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-srE0nUvQYh .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-srE0nUvQYh .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-srE0nUvQYh .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-srE0nUvQYh .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-srE0nUvQYh img {
+    height: 3.8rem !important;
+  }
+  .cid-srE0nUvQYh .btn {
+    display: -webkit-flex;
+  }
+  .cid-srE0nUvQYh button.navbar-toggler {
+    display: block;
+  }
+  .cid-srE0nUvQYh .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-srE0nUvQYh .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-srE0nUvQYh .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-srE0nUvQYh .navbar-collapse.collapsing,
+  .cid-srE0nUvQYh .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-srE0nUvQYh .navbar-collapse.collapsing .navbar-nav,
+  .cid-srE0nUvQYh .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-srE0nUvQYh .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-srE0nUvQYh .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-srE0nUvQYh .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-srE0nUvQYh .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-srE0nUvQYh .navbar-collapse.collapsing .navbar-buttons,
+  .cid-srE0nUvQYh .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-srE0nUvQYh .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-srE0nUvQYh .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-srE0nUvQYh .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-srE0nUvQYh .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-srE0nUvQYh .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-srE0nUvQYh .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-srE0nUvQYh .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-srE0nUvQYh .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-srE0nUvQYh .nav-link:hover,
+.cid-srE0nUvQYh .dropdown-item:hover {
+  color: #d2ff24 !important;
+}
+.cid-srE0nUSOga {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srE0nUSOga .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-srE0nUSOga .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-srE0nUSOga .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-srE0nUSOga .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-srE0nUSOga .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-srE0nUSOga .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-srE0nUSOga .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-srE0nUSOga .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-srE0nUSOga .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-srE0nUSOga .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-srE0nUSOga .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-srE0nUSOga .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-srE0nUSOga .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-srE0nUSOga .media-container-row .row-copirayt p {
+  width: 100%;
 }
